Attempted to fix footer link row bug on mobile

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ a:hover{
 	width: 100%;
 	height: 1px;
 	bottom: 0;
+	background-color: rgba(0,0,0, 0.97);
 }
 
 .links-row {
